cleanup build, bump dependencies