@@ -96,7 +96,7 @@
 		<spotify.hamcrest.version>1.3.2</spotify.hamcrest.version>
 		<json-unit-assertj.version>3.4.1</json-unit-assertj.version>
 		<json-schema-validator.version>1.5.1</json-schema-validator.version>
-		
+
 		<!-- Maven Plug-Ins -->
 		<tycho.version>4.0.8</tycho.version>
 		<spdx-maven-plugin.version>0.7.3</spdx-maven-plugin.version>
@@ -108,8 +108,8 @@
 		<spotbugs-maven-plugin.version>4.8.6.2</spotbugs-maven-plugin.version>
 		<sb-contrib.version>7.6.4</sb-contrib.version>
 		<maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
-		
-		 <!-- Base argLine for JDK21+ profiles -->
+
+		<!-- Base argLine for JDK21+ profiles -->
 		<argLine />
 	</properties>
 
@@ -199,7 +199,7 @@
 				<artifactId>json-unit-assertj</artifactId>
 				<version>${json-unit-assertj.version}</version>
 			</dependency>
-			
+
 			<!-- Spring-Boot -->
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
@@ -703,7 +703,18 @@
 							<version>${maven-surefire-plugin.version}</version>
 							<configuration>
 								<argLine>@{argLine} -Xshare:off
-									-XX:+EnableDynamicAgentLoading</argLine>
+									-XX:+EnableDynamicAgentLoading
+									-Djava.security.manager=allow</argLine>
+							</configuration>
+						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-failsafe-plugin</artifactId>
+							<version>${maven-failsafe-plugin.version}</version>
+							<configuration>
+								<argLine>@{argLine} -Xshare:off
+									-XX:+EnableDynamicAgentLoading
+									-Djava.security.manager=allow</argLine>
 							</configuration>
 						</plugin>
 					</plugins>
@@ -747,7 +758,7 @@
 				https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
 		</repository>
 	</distributionManagement>
-	
+
 	<repositories>
 		<!-- Central on top here makes sure it has the highest priority. -->
 		<repository>
@@ -766,7 +777,7 @@
 			</snapshots>
 		</repository>
 	</repositories>
-	
+
 	<pluginRepositories>
 		<!-- Central on top here makes sure it has the highest priority. -->
 		<pluginRepository>
